--- a/assets/style.css
+++ b/assets/style.css
@@ -4,21 +4,25 @@
     padding: 0;
 }
 
-/* Style the navigation menu */
+body{
+    font-family: 'Bitter';
+}
+
+h1{
+    font-size: 20px;
+    text-align: center;
+}
 
 .navigation {
     overflow: hidden;
-    background-color: #333;
+    background-color: #ff5549;
     position: relative;
 }
 
-/* Hide the links inside the navigation menu (except for logo/home) */
-
 .navigation #menu {
     display: none;
+    margin-top: 50px;
 }
-
-/* Style navigation menu links */
 
 .navigation a {
     color: white;
@@ -28,38 +32,67 @@
     display: block;
 }
 
-/* Style the hamburger menu */
-
-.navigation a.burger {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
+.burger{
+    float: right;
 }
 
-/* Add a grey background color on mouse-over */
 
-.navigation a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Style the active link */
-
-.logo {
+.logo1 {
     background-color: #4CAF50;
     color: white;
+    
+}
+
+.title{
+    position: absolute;
+    color: white;
+    top: 12px;
+    left: 80px;
+    font-weight: 500;
+    font-size: 22px;
+    text-decoration: none;
 }
 
 /*recepies*/
 
 .gridContainer {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 50px;
-    width: 80%;
+    grid-template-columns: auto ;
+    grid-row-gap: 25px;
+    width: 50%;
     margin: auto;
+    margin-top: 25px;
+}
+
+.linkGrid {
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    grid-row-gap: 25px;
+}
+
+.align {
+    background-color: #ff5549;
+    border-radius: 8px;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 15px 30px;
+    text-decoration: none;
+    width: 200px;
+    text-align: center;
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    height: 100px;
 }
 
 .item1, .item3 {
@@ -71,7 +104,7 @@
     height: 130px;
 }
 
-.recipeContainerMeat, .recipeContainerVegetarian{
+.recipeContainerMeat, .recipeContainerVegetarian {
     display: none;
     grid-gap: 20px;
     width: 80%;
@@ -79,7 +112,7 @@
     padding-top: 50px;
 }
 
-.recipe{
+.recipe {
     border: solid red 2px;
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -87,103 +120,133 @@
     margin: auto;
 }
 
-.pictureOfFood{
+.pictureOfFood {
     grid-row-start: 1;
     grid-row-end: 3;
 }
 
-.name{
+.name {
     grid-column-start: 2;
     grid-column-end: 4;
 }
 
-.move{
+.move {
     grid-column-start: 2;
     grid-column-end: 3;
 }
 
-.back{
+.back {
     display: none;
 }
 
-.ingredients{
+.ingredients {
     display: none;
 }
 
-.directions{
+.directions {
     display: none;
 }
 
-.tips{
+.tips {
     display: none;
 }
 
-.show{
+.show {
     display: block;
 }
 
-/*Forum*/
+.label{
+    text-align: center;
+}
+
+.input{
+    margin-left: 22%;
+}
+
+.submit{
+    background-color: #ff5549;
+    padding: 15px 30px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 20%;
+}
+.buttons{
+    margin: 25px 0 0 55px;
+}
 
 /*groceries*/
 
-.groceries{
+.groceries {
     grid-template-columns: auto auto auto auto;
 }
 
-.grocery{
+.grocery {
     padding: 20px;
 }
 
-.groceriesContainer{
+.groceriesContainer {
     display: none;
     grid-gap: 15px;
 }
 
-.grContainer{
+.grContainer {
     display: grid;
     grid-template-rows: auto auto;
     grid-template-columns: auto auto auto;
 }
-.showGrid{
+
+.showGrid {
     display: grid;
 }
 
 .genderSlider {
-    -webkit-appearance: none;  /* Override default CSS styles */
+    -webkit-appearance: none;
+    /* Override default CSS styles */
     appearance: none;
-    width: 100%; /* Full-width */
-    height: 25px; /* Specified height */
-    background: #d3d3d3; /* Grey background */
-    outline: none; /* Remove outline */
-  }
+    width: 100%;
+    /* Full-width */
+    height: 25px;
+    /* Specified height */
+    background: #d3d3d3;
+    /* Grey background */
+    outline: none;
+    /* Remove outline */
+}
 
 .genderSlider::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none;
+    /* Override default look */
     appearance: none;
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */
-    background: #E01B22; /* Green background */
+    width: 25px;
+    /* Set a specific slider handle width */
+    height: 25px;
+    /* Slider handle height */
+    background: #E01B22;
+    /* Green background */
     border-radius: 100%;
+}
 
-  }
-.gender{
+.gender {
     display: grid;
     grid-template-columns: 20% 60% 20%;
 }
 
-.slidecontainer{
+.slidecontainer {
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 1;
     grid-column-end: 4;
 }
 
-.right{
+.right {
     grid-column-start: 3;
     grid-column-end: 4;
 }
 
-.center{
+.center {
     display: flex;
     justify-content: center;
     align-self: center;
