--- a/assets/style.css
+++ b/assets/style.css
@@ -84,7 +84,12 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-gap: 15px;
+    padding: 0 20px;
     margin: auto;
+    background-size: contain;
+    justify-content: center;
+    align-content: center;
+    
 }
 
 .pictureOfFood{
